# containllm

./: .gitignore  DOCKERFILE  README.md  deploy_all.sh  docker-compose.yml  entrypoint.sh  namespace.yaml
.github/workflows/: build-push-images.yml
crewai-deployment/: 1-namespace.yaml  2-deployment.yaml  2-secrets.yaml  3-configmap.yaml  4-deployment.yaml  5-service.yaml  Dockerfile  README.md  create_secrets.sh  deploy_crewai.sh  requirements.txt  service.yaml
crewai-deployment/crew_setup/: pyproject.toml
crewai-deployment/crew_setup/src/stock_crew/: main.py
crewai_ui_deployment/: 1-namespace.yaml  2-secrets.yaml  3-configmap.yaml  4-deployment.yaml  5-service.yaml
crewcontainer/: Dockerfile  README.md  deployment.yaml
kubernetes-dashboard/: 0-namespace.yaml  2-adminrole.yaml  3-kubernetes-dashboard-v7-10-4.yaml  dashboard  serviceaccounts.yaml
llm-deployment/: backend-depl.yaml  frontend-depl.yaml  pvc.yaml  service.yaml
manifests/: backend-depl.yaml  frontend-depl.yaml  pvc.yaml  service.yaml  serviceaccounts.yaml
models/: README.md
n8n-deployment/: 1-storage.yaml  2-secrets.yaml  3-configmap.yaml  4-deployment.yaml  5-service.yaml  README.md
ollama-deployment/: 0-namespace.yaml  1-configmap.yaml  2-deployment-tiny.yaml  2-service.yaml  3-deployment-large.yaml  3-deployment-small.yaml  3-deployment.yaml  4-deployment-large.yaml  Dockerfile  README.md  run-ollama.sh
openwebui-deployment/: 0-namespace.yaml  1-configmap.yaml  2-pvc.yaml  3-service.yaml  4-deployment.yaml
test/: Dockerfile  Dockerfile_v1  Dockerfile_v2  run-ollama.sh
(+5 files in other folders)
