[project]
name = "stock_crew"
version = "0.1.0"
description = "stock_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
stock_crew = "stock_crew.main:run"
run_crew = "stock_crew.main:run"
train = "stock_crew.main:train"
replay = "stock_crew.main:replay"
test = "stock_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
